# NapiBench

./: .gitignore  README.md  benchmark-functions.js  fake_price.js  index.d.ts  index.js  index.test.js  indicators.js  indicators.test.js  native.test.js  package-lock.json  package.json  ports.config.js  prices.json  result.html
bench/: bench-k6.js  benchmark-browser.js  benchmark-functions.js
k6/: bench-rust.js  bench.js
plans/: bench.md  napi-setup.md  napi.md  rust-addon-optimization.md
reports/: benchmark-functions.html  browser-bench-results.json  bun-bench-results.json  bun_price-rust_metrics.json  bun_price-rust_report.html  bun_price-rust_summary.json  bun_price_metrics.json  bun_price_report.html  bun_price_summary.json  bun_report.html  combined_benchmark-functions.html  combined_benchmark-k6.html  combined_benchmark-k6_price.html  node.js-bench-results.json  node_price-rust_metrics.json  node_price-rust_report.html  node_price-rust_summary.json  node_price_metrics.json  node_price_report.html  node_price_summary.json  node_report.html  rust_sycn_vs_async.md
rust-addon/: Cargo.toml  build.rs
rust-addon/src/: indicators.rs  lib.rs  napi_impl.rs  signals.rs  summary.rs  utils.rs  wasm.rs
scripts/: bench-functions.sh  bench-k6.sh  generate-combined-report.cjs  kill_servers.sh  run-bench.sh  setup.sh
src/: fake-price.js  indicators.js  server.js
tests/: indicators.test.js  native.test.js  server.test.js
